--- a/DemoWE/Views/Home/Employee.cshtml
+++ b/DemoWE/Views/Home/Employee.cshtml
@@ -7,106 +7,108 @@
     @* <asp:Label runat="server" ID="ShowDate"></asp:Label> *@
 </p>
 
-<div style="position: absolute; top:5%; left: 50%; transform: translateX(-50%); border-radius: 10px; width:80%; height: 20%; padding: 10px; color: white; font-size: 30px;overflow: hidden;
-              background: #9152f8;
-              background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-              background: -o-linear-gradient(top, #7579ff, #b224ef);
-              background: -moz-linear-gradient(top, #7579ff, #b224ef);
-              background: linear-gradient(top, #7579ff, #b224ef);">
-    <div style=" padding: 30px; left: 50%;">
+<div style="position: absolute; top:5%; left: 50%; transform: translateX(-50%); border-radius: 10px; width:80%; height: 20%; padding: 10px; color: white; font-size: 30px; overflow: hidden; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.3);">
+    <div style="padding: 30px; left: 50%;">
         Hello, @ViewBag.name!<br />
         <span style="color: white;">@DateTime.Now.ToString("dddd")</span>
     </div>
 
-    <div style="position: absolute; top: 50%; right: 20px; transform: translateY(-50%);padding: 30px;">
+    <div style="position: absolute; top: 50%; right: 20px; transform: translateY(-50%); padding: 30px;">
         <span id="currentTime" style="color: white;"></span>
     </div>
 </div>
 
-<div style="position: absolute; top:35%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height: 15%; padding: 10px; color: white; font-size: 30px;
-            background: #9152f8;
-              background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-              background: -o-linear-gradient(top, #7579ff, #b224ef);
-              background: -moz-linear-gradient(top, #7579ff, #b224ef);
-              background: linear-gradient(top, #7579ff, #b224ef);">
-          <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
-                   @ViewBag.DepartmentName Department
-               </div>
-          </div>
+<div style="position: absolute; top:35%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height: 20%; padding: 10px; color: white; font-size: 30px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
+    <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
+        @ViewBag.DepartmentName Department
+    </div>
+</div>
 
-<div style="position: absolute; top:55%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height:  15%; padding: 10px; color: white; font-size: 30px;
-            background: #9152f8;
-              background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-              background: -o-linear-gradient(top, #7579ff, #b224ef);
-              background: -moz-linear-gradient(top, #7579ff, #b224ef);
-              background: linear-gradient(top, #7579ff, #b224ef);"></div>
+<div style="position: absolute; top:60%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height:  20%; padding: 10px; color: white; font-size: 30px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
+    <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
+        @if (ViewBag.NewOrInProgressCount == 1)
+        {
+            <span>@ViewBag.NewOrInProgressCount Active Task</span>
+        }
+        else if (ViewBag.NewOrInProgressCount == 0)
+        {
+            <span>No Active Tasks</span>
+        }
+        else
+        {
+            <span>@ViewBag.NewOrInProgressCount Active Tasks</span>
+        }
+    </div>
+</div>
 
-<div id="taskDataContainer" style=" position: absolute; top:35%; left:82%; transform: translateX(-50%); border-radius: 10px; width:15%; height: 35%; padding: 10px; color: white; font-size: 25px;
+<form id="taskForm">
+    <div id="taskDataContainer" style="position: absolute; top:35%; left:82%; transform: translateX(-50%); border-radius: 10px; width:15%; height: 45%; padding: 10px; color: black; font-size: 25px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); justify-content: center; align-items: center;box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
+
+        @section scripts {
+            <script>
+                $(document).ready(function () {
+                    $.ajax({
+                        url: '@Url.Action("TData", "Home")',
+                        method: 'GET',
+                        dataType: 'json',
+                        success: function (data) {
+                            var taskTitles = data[0];
+                            var statuses = data[1];
+
+                            var container = $('#taskDataContainer');
+                            for (var i = 0; i < taskTitles.length; i++) {
+                                var taskDiv = $('<div class="task-item"></div>').css({
+                                    'border': '1px solid #ccc',
+                                    'border-radius': '10px',
+                                    'margin': '3px',
+                                    'margin-bottom': '10px',
+                                    'padding': '10px',
+                                    'align-items': 'center',
+                                    'background-color': '#f9f9f9',
+                                    'box-shadow': '0 2px 4px rgba(0, 0, 0, 0.1)'
+                                });
+                                var titleSpan = $('<span>' + taskTitles[i] + '</span>').css({
+                                    'font-weight': 'bold',
+                                    'margin-bottom': '5px',
+                                    'display': 'block'
+                                });
+                                var statusSpan = $('<span>' + statuses[i] + '</span>').css({
+                                    'padding': '5px',
+                                    'border-radius': '4px',
+                                    'color': '#fff',
+                                    'font-size': '18px',
+                                    'text-transform': 'uppercase',
+                                    'display': 'inline-block',
+                                    'margin-top': '5px'
+                                });
+                                if (statuses[i] === "Completed") {
+                                    statusSpan.addClass('completed').css('background-color', '#4CAF50');
+                                } else if (statuses[i] === "Declined") {
+                                    statusSpan.addClass('declined').css('background-color', '#F44336');
+                                } else {
+                                    statusSpan.addClass('in-progress').css('background-color', '#FFC107');
+                                }
+                                taskDiv.append(titleSpan).append(statusSpan);
+                                container.append(taskDiv);
+                            }
+                        },
+                        error: function (xhr, status, error) {
+                            console.log('Error: ' + error);
+                        }
+                    });
+                });
+            </script>
+        }
+    </div>
+</form>
+
+<div style="position: absolute; top:35%; right: 60px; left:35%; width:35%; height:45%;  border-radius: 10px;padding: 25px;
             background: #9152f8;
               background: -webkit-linear-gradient(top, #7579ff, #b224ef);
               background: -o-linear-gradient(top, #7579ff, #b224ef);
               background: -moz-linear-gradient(top, #7579ff, #b224ef);
               background: linear-gradient(top, #7579ff, #b224ef);
-                justify-content: center;align-items: center;">
-
-    @section scripts {
-        <script>
-            $(document).ready(function () {
-                $.ajax({
-                    url: '@Url.Action("TData", "Home")',
-                    method: 'GET',
-                    dataType: 'json',
-                    success: function (data) {
-                        var taskTitles = data[0];
-                        var statuses = data[1];
-
-                        var container = $('#taskDataContainer');
-                        for (var i = 0; i < taskTitles.length; i++) {
-                            var div = $('<br/><div></div>').addClass('task-item');
-                            div.append('<span>' + taskTitles[i] + '</span>');
-                            var statusSpan = $('<span>' + statuses[i] + '</span>');
-                            if (statuses[i] === "Completed") {
-                                statusSpan.addClass('completed');
-                            } else if (statuses[i] === "Declined") {
-                                statusSpan.addClass('declined');
-                            }
-                            div.append(statusSpan);
-                            container.append(div);
-                        }
-                    },
-                    error: function (xhr, status, error) {
-                        console.log('Error: ' + error);
-                    }
-                });
-            });
-        </script>
-    }
-</div>
-<style>
-    .task-item {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 10px; /* Adjust spacing between items */
-    }
-
-        .task-item span {
-            margin: 0 5px; /* Adjust spacing between title and status */
-        }
-
-    .completed {
-        color: green; /* Set text color to green for Completed status */
-    }
-
-    .declined {
-        color: red; /* Set text color to red for Declined status */
-    }
-</style>
-<div style="position: absolute; top:35%; right: 60px; left:35%; width:35%; height:35%;  border-radius: 10px;padding: 25px;
-            background: #9152f8;
-              background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-              background: -o-linear-gradient(top, #7579ff, #b224ef);
-              background: -moz-linear-gradient(top, #7579ff, #b224ef);
-              background: linear-gradient(top, #7579ff, #b224ef);">
+              box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
     <canvas id="myChart" style="max-width:800px;max-height:500px; border-radius: 10px; left:50%; top:50%;"></canvas>
 </div>
 
@@ -233,7 +235,7 @@
         }
     });
 </script>
-
+@* 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
     google.charts.load('current', { packages: ['timeline'] }); // Load the timeline package
@@ -275,4 +277,4 @@
 
         chart.draw(dataTable);
     }
-</script>
+</script> *@
