--- a/DemoWE/Views/Home/Employee.cshtml
+++ b/DemoWE/Views/Home/Employee.cshtml
@@ -8,24 +8,25 @@
 </p>
 
 <div style="position: absolute; top:5%; left: 50%; transform: translateX(-50%); border-radius: 10px; width:80%; height: 20%; padding: 10px; color: white; font-size: 30px; overflow: hidden; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.3);">
-    <div style="padding: 30px; left: 50%;font-size: 30px;">
+    <div style="padding: 30px; left: 30px;font-size: 40px;position: absolute; top: 50%; transform: translateY(-50%); padding: 30px;">
         Hello, @ViewBag.name!<br />
         <span style="color: white;">@DateTime.Now.ToString("dddd")</span>
     </div>
 
+   
     <div style="position: absolute; top: 50%; right: 20px; transform: translateY(-50%); padding: 30px;font-size: 50px;">
         <span id="currentTime" style="color: white;"></span>
     </div>
 </div>
 
 <div style="position: absolute; top:35%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height: 20%; padding: 10px; color: white; font-size: 30px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
-    <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
+    <div style="display: flex; justify-content: center; align-items: center; height: 100%;font-size: 40px;">
         @ViewBag.DepartmentName Department
     </div>
 </div>
 
 <div style="position: absolute; top:60%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height:  20%; padding: 10px; color: white; font-size: 30px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
-    <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
+    <div style="display: flex; justify-content: center; align-items: center; height: 100%;font-size: 40px;">
         @if (ViewBag.NewOrInProgressCount == 1)
         {
             <span>@ViewBag.NewOrInProgressCount Active Task</span>
@@ -41,8 +42,8 @@
     </div>
 </div>
 <form id="taskForm">
-<div id="taskDataContainer" style="position: absolute; top:35%; left:82%; transform: translateX(-50%); border-radius: 10px; width:15%; max-width: 300px; height: 45%; max-height: 500px; overflow-y: auto; padding: 10px; color: black; font-size: 20px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); justify-content: center; align-items: center;box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
-  
+    <div id="taskDataContainer" style="position: absolute; top:35%; left:82%; transform: translateX(-50%); border-radius: 10px; width:15%; max-width: 300px; height: 45%; max-height: 500px; overflow-y: auto; padding: 10px; color: black; font-size: 20px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); justify-content: center; align-items: center;box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
+
         @section scripts {
             <script>
                 $(document).ready(function () {
@@ -99,8 +100,8 @@
                 });
             </script>
         }
-    
-</div>
+
+    </div>
 </form>
 </div>
 <div style="position: absolute; top:35%; right: 60px; left:35%; width:35%; height:45%;  border-radius: 10px;padding: 25px;
@@ -156,181 +157,57 @@
                 OnError(error);
             }
         });
-       function OnSuccessResult(data) {
-    var _data = data;
-    var _chartLabels = _data[0];
-    var _StartData = _data[1].map(date => new Date(date)); // Convert to Date object
-    var _DeadData = _data[2].map(date => new Date(date)); // Convert to Date object
-
-    var lineColors = ["red", "blue", "green", "yellow", "orange", "purple", "pink", "brown", "grey", "black"]; // Define line colors
-
-    var datasets = []; // Initialize array to store datasets
-
-    for (var i = 0; i < _StartData.length; i++) {
-        var taskData = [{ x: _StartData[i], y: i }, { x: _DeadData[i], y: i }]; // Data for each task
-        datasets.push({
-            label: "Task " + (i + 1),
-            data: taskData,
-            borderColor: lineColors[i % lineColors.length], // Cycle through line colors
-            borderWidth: 2,
-            fill: false
-        });
-    }
-
-    var annotations = []; // Initialize array to store annotations
-
-    for (var i = 0; i < _StartData.length; i++) {
-        annotations.push({
-            type: 'line',
-            mode: 'horizontal',
-            scaleID: 'y',
-            value: i, // Set the y-value to match the y-level of the task
-            borderColor: lineColors[i % lineColors.length], // Use the same color as the corresponding line
-            borderWidth: 2
-        });
-    }
-
-    var chartData = {
-        labels: _chartLabels,
-        datasets: datasets // Assign datasets array
-    };
-
-    var chartOptions = {
-        indexAxis: 'y',
-        responsive: true,
-        maintainAspectRatio: false,
-        scales: {
-            y: {
-                beginAtZero: true,
-                ticks: {
-                    color: 'white',
-                    stepSize: 1 // Add spacing between task lines
-                }
-            },
-            x: {
-                type: 'time',
-                time: {
-                    unit: 'day',
-                },
-                ticks: {
-                    color: 'white'
-                },
-                min: _StartData[0], // Set minimum x-axis value
-                max: _DeadData[_DeadData.length - 1], // Set maximum x-axis value
-                minRotation: 0,
-                maxRotation: 0
-            }
-        },
-        plugins: {
-            annotation: {
-                annotations: annotations // Assign annotations array
-            }
-        }
-    };
-
-    var myChart = new Chart("myChart", {
-        type: "line",
-        data: chartData,
-        options: chartOptions
-    });
-}
-
-        function OnError(err) {
-            console.log(err);
-        }
-    });
-</script>
-
-@* 
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript">
-    google.charts.load('current', { packages: ['timeline'] }); // Load the timeline package
-
-    google.charts.setOnLoadCallback(initialize); // Set callback to initialize function
-
-    function initialize() {
-        var opts = { sendMethod: 'auto' };
-        // Replace the data source URL on next line with your data source URL.
-        var query = new google.visualization.Query('Data Source=SQL6031.site4now.net;Initial Catalog=db_aa7de3_t10;User Id=db_aa7de3_t10_admin;Password=A$d12345', opts);
-
-        // Optional request to return only column C and the sum of column B, grouped by C members.
-        query.setQuery('select CreatedBy, MONTH(CreatedDate) as Month, COUNT(*) as TaskCount from STask group by CreatedBy, MONTH(CreatedDate)');
-
-        // Send the query with a callback function.
-        query.send(handleQueryResponse);
-    }
-
-    function handleQueryResponse(response) {
-        if (response.isError()) {
-            alert('Error in query: ' + response.getMessage() + ' ' + response.getDetailedMessage());
-            return;
-        }
-
-        var container = document.getElementById('example2');
-        var chart = new google.visualization.Timeline(container);
-        var dataTable = new google.visualization.DataTable();
-
-        dataTable.addColumn({ type: 'string', id: 'Term' });
-        dataTable.addColumn({ type: 'string', id: 'Name' });
-        dataTable.addColumn({ type: 'date', id: 'Start' });
-        dataTable.addColumn({ type: 'date', id: 'End' });
-
-        // Replace this part with your data query response
-        var queryResponseData = response.getDataTable();
-
-        // Add rows from the query response data
-        dataTable.addRows(queryResponseData);
-
-        chart.draw(dataTable);
-    }
-</script> *@
-
-      @*   function OnSuccessResult(data) {
+        function OnSuccessResult(data) {
             var _data = data;
             var _chartLabels = _data[0];
-            var _StartData = _data[1].map(date => new Date(date)); // Convert to Date object
-            var _DeadData = _data[2].map(date => new Date(date)); // Convert to Date object
+            var _StartData = _data[1].map(date => new Date(date));
+            var _DeadData = _data[2].map(date => new Date(date));
 
-            var lineColors = ["red", "blue", "green", "yellow", "orange", "purple", "pink", "brown", "grey", "black"]; // Define line colors
+            // Define line colors
+            var lineColors = ["red", "blue", "green", "yellow", "orange", "purple", "pink", "brown", "grey", "black"];
 
-            var datasets = []; // Initialize array to store datasets
+            var datasets = [];
+            var taskMapping = {}; // Object to map task names to numerical values
 
             for (var i = 0; i < _StartData.length; i++) {
-                var taskData = [{ x: _StartData[i], y: i }, { x: _DeadData[i], y: i }]; // Data for each task
+                var taskName = _chartLabels[i]; // Get task name
+                taskMapping[taskName] = i; // Map task name to numerical value
+                var taskData = [{ x: _StartData[i], y: taskName }, { x: _DeadData[i], y: taskName }]; // Use task name for y-value
                 datasets.push({
-                    label: "Task " + (i + 1),
+                    label: "Task " + taskName,
                     data: taskData,
-                    borderColor: lineColors[i % lineColors.length], // Cycle through line colors
+                    borderColor: lineColors[i % lineColors.length],
                     borderWidth: 2,
                     fill: false
                 });
             }
 
-            var annotations = []; // Initialize array to store annotations
+            var annotations = [];
 
             for (var i = 0; i < _StartData.length; i++) {
+                var taskName = _chartLabels[i];
                 annotations.push({
                     type: 'line',
                     mode: 'horizontal',
                     scaleID: 'y',
-                    value: i, // Set the y-value to match the y-level of the task
-                    borderColor: lineColors[i % lineColors.length], // Use the same color as the corresponding line
+                    value: taskMapping[taskName], // Use numerical value from mapping
+                    borderColor: lineColors[i % lineColors.length],
                     borderWidth: 2
                 });
             }
 
             var chartData = {
                 labels: _chartLabels,
-                datasets: datasets // Assign datasets array
+                datasets: datasets
             };
 
             var chartOptions = {
-                indexAxis: 'y',
+                indexAxis: 'x',
                 responsive: true,
                 maintainAspectRatio: false,
                 scales: {
                     y: {
-                        beginAtZero: true,
+                        type: 'category', // Use category scale for task names
                         ticks: {
                             color: 'white'
                         }
@@ -343,15 +220,15 @@
                         ticks: {
                             color: 'white'
                         },
-                        min: _StartData[0], // Set minimum x-axis value
-                        max: _DeadData[_DeadData.length - 1], // Set maximum x-axis value
+                        min: _StartData[0],
+                        max: _DeadData[_DeadData.length - 1],
                         minRotation: 0,
                         maxRotation: 0
                     }
                 },
                 plugins: {
                     annotation: {
-                        annotations: annotations // Assign annotations array
+                        annotations: annotations
                     }
                 }
             };
@@ -361,4 +238,10 @@
                 data: chartData,
                 options: chartOptions
             });
-        } *@
+        }
+
+        function OnError(err) {
+            console.log(err);
+        }
+    });
+</script> 
