--- a/DemoWE/Views/Home/Employee.cshtml
+++ b/DemoWE/Views/Home/Employee.cshtml
@@ -6,15 +6,22 @@
 <p>
     @* <asp:Label runat="server" ID="ShowDate"></asp:Label> *@
 </p>
+@* <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-... (the integrity hash) ...">
+<i class="far fa-clock"></i>
+ *@
+ <div style="position: absolute; top:5%; left: 50%; transform: translateX(-50%); border-radius: 10px; width:80%; height: 20%; padding: 10px; color: white; font-size: 30px; overflow: hidden; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.3);">
+    <!-- Time icon -->
+    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 80px;">
+        <img src="https://www3.0zz0.com/2024/05/14/21/558961871.png" alt="Logo" style="max-height: 80px;">
 
-<div style="position: absolute; top:5%; left: 50%; transform: translateX(-50%); border-radius: 10px; width:80%; height: 20%; padding: 10px; color: white; font-size: 30px; overflow: hidden; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.3);">
-    <div style="padding: 30px; left: 30px;font-size: 40px;position: absolute; top: 50%; transform: translateY(-50%); padding: 30px;">
+    </div>
+
+    <div style="padding: 30px; left: 30px; font-size: 40px; position: absolute; top: 50%; transform: translateY(-50%); padding: 30px;">
         Hello, @ViewBag.name!<br />
         <span style="color: white;">@DateTime.Now.ToString("dddd")</span>
     </div>
 
-   
-    <div style="position: absolute; top: 50%; right: 20px; transform: translateY(-50%); padding: 30px;font-size: 50px;">
+    <div style="position: absolute; top: 50%; right: 20px; transform: translateY(-50%); padding: 30px; font-size: 50px;">
         <span id="currentTime" style="color: white;"></span>
     </div>
 </div>
@@ -174,10 +181,10 @@
                 taskMapping[taskName] = i; // Map task name to numerical value
                 var taskData = [{ x: _StartData[i], y: taskName }, { x: _DeadData[i], y: taskName }]; // Use task name for y-value
                 datasets.push({
-                    label: "Task " + taskName,
+                    label: taskName,
                     data: taskData,
                     borderColor: lineColors[i % lineColors.length],
-                    borderWidth: 2,
+                    borderWidth: 5,
                     fill: false
                 });
             }
