--- a/DemoWE/wwwroot/css/table.css
+++ b/DemoWE/wwwroot/css/table.css
@@ -1,6 +1,6 @@
 ﻿@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Roboto');
 
-    * {
+* {
     margin: 0;
     padding: 0;
     outline: 0;
@@ -13,11 +13,11 @@
     bottom: 0;
     right: 0;
     z-index: 1;
-    background: rgb(233,76,161);
-    background: -moz-linear-gradient(90deg, rgba(233,76,161,1) 0%, rgba(199,74,233,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(233,76,161,1) 0%, rgba(199,74,233,1) 100%);
-    background: linear-gradient(90deg, rgba(233,76,161,1) 0%, rgba(199,74,233,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e94ca1",endColorstr="#c74ae9",GradientType=1);
+    background: rgb(233, 76, 161);
+    background: -moz-linear-gradient(90deg, rgba(233, 76, 161, 1) 0%, rgba(199, 74, 233, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(233, 76, 161, 1) 0%, rgba(199, 74, 233, 1) 100%);
+    background: linear-gradient(90deg, rgba(233, 76, 161, 1) 0%, rgba(199, 74, 233, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#e94ca1", endColorstr="#c74ae9", GradientType=1);
     opacity: 0.7;
 }
 
@@ -26,15 +26,22 @@ table {
     z-index: 2;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 75%;
+    min-left: 50px; /* Minimum left offset */
     border-collapse: collapse;
     border-spacing: 0;
-    box-shadow: 0 2px 15px rgba(64,64,64,.7);
+    box-shadow: 0 2px 15px rgba(64, 64, 64, .7);
     border-radius: 30px;
+    transition: left 0.5s; /* Smooth transition when moving the table */
 }
 
-td, th {
+.sidebar-open table {
+    left: calc(200px + 50%); /* Width of sidebar + some margin */
+}
+
+td,
+th {
     padding: 15px 20px;
     text-align: center;
 }
@@ -42,7 +49,7 @@ td, th {
 th {
     background: -webkit-linear-gradient(top, #7579ff, #b224ef);
     color: #fafafa;
-    font-family: 'Open Sans',Sans-serif;
+    font-family: 'Open Sans', Sans-serif;
     font-weight: 200;
     text-transform: uppercase;
 }
@@ -56,6 +63,3 @@ tr {
     tr:nth-child(even) {
         background-color: #eeeeee;
     }
-
-
- 
