--- a/DemoWE/Views/Shared/_Layout.cshtml
+++ b/DemoWE/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
             z-index: 1; /* Stay on top */
             top: 0;
             left: 0;
-            background-color: #DDDDDD; /* Gray */
+            background-color: white; /* Gray */
             overflow-x: hidden; /* Disable horizontal scroll */
             transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
             padding-top: 20px; /* Place content 20px from the top */
@@ -203,7 +203,7 @@
             align-items: center;
             padding: 10px;
             margin-top: auto;
-            background-color: #f8f9fa;
+            background-color: white;
         }
 
         .user-logo {
